package connect4.views.graphics;

public interface Command {
     public abstract void execute();
}
