package connect4.views.graphics;

import javax.swing.JPanel;

public abstract class PanelView extends JPanel {

    public abstract void write();

}
